classDiagram
            class User {
                +int id
                +string name
                +string email
                +string password
                +string role
                +login()
                +logout()
            }
            
            class Product {
                +int id
                +string name
                +float price
                +string description
                +checkStock()
            }
            
            class Stock {
                +int id
                +int product_id
                +int quantity
                +reduceStock(qty)
                +addStock(qty)
            }
            
            class Order {
                +int id
                +int user_id
                +string status
                +float total_price
                +calculatePreparationTime()
            }
            
            class ProductCluster {
                +int id
                +int product_id
                +int cluster
                +string priority_level
            }
            
            User "1" -- "0..*" Order : makes
            Product "1" -- "1" Stock : has
            Product "1" -- "0..*" ProductCluster : mapped_to
            Order "1" -- "1..*" Product : contains